<resources>
    <string name="app_name">CalculatorX</string>
    <string name="but_1">1</string>
    <string name="but_2">2</string>
    <string name="but_3">3</string>
    <string name="but_4">4</string>
    <string name="but_5">5</string>
    <string name="but_6">6</string>
    <string name="but_7">7</string>
    <string name="but_8">8</string>
    <string name="but_9">9</string>
    <string name="but_0">0</string>
    <string name="but_div">/</string>
    <string name="but_mult">*</string>
    <string name="but_sub">-</string>
    <string name="but_sum">+</string>
    <string name="but_point">.</string>
    <string name="but_log">LOG</string>
    <string name="but_sqrt">&#8730;</string>
    <string name="but_per">%</string>
    <string name="but_deg">x&#178;</string>
    <string name="but_x">D</string>
    <string name="but_c">c</string>
    <string name="but_opt">OPT</string>
    <string name="but_eql">=</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="theme">Choose the Theme</string>
    <string name="but_light">L</string>
    <string name="but_dark">D</string>


</resources>