<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light_back_wall"
    android:orientation="vertical"
    tools:context=".CalcuatorActivity">

    <TextView
        android:id="@+id/number_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="right"
        android:textSize="@dimen/numbers_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/operation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="6"
            android:gravity="center"
            android:textSize="@dimen/numbers_text_size" />

        <TextView
            android:id="@+id/number_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="@dimen/numbers_text_size" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="right"
        android:textSize="@dimen/numbers_text_size" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="4">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/but_c"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:text="@string/but_c"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/but_..."
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:text="@string/but_x"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/but_opt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:text="@string/but_opt"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/but_div"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:text="@string/but_div"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/but_7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:text="@string/but_7"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/but_8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:text="@string/but_8"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/but_9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:text="@string/but_9"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/but_mult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:text="@string/but_mult"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/but_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:text="@string/but_4"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/but_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:text="@string/but_5"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/but_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:text="@string/but_6"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/but_sub"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:text="@string/but_sub"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/but_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:text="@string/but_1"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/but_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:text="@string/but_2"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/but_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:text="@string/but_3"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/but_sum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:text="@string/but_sum"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/but_0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:text="@string/but_0"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/but_dot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:text="@string/but_point"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/but_eql"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:text="@string/but_eql"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="20dp" />

    </GridLayout>


</LinearLayout>